syntax = "proto3";

package network;

option go_package = "github.com/altuslabsxyz/devnet-builder/pkg/network/plugin";

// NetworkModule service definition
service NetworkModule {
    // Identity
    rpc Name(Empty) returns (StringResponse);
    rpc DisplayName(Empty) returns (StringResponse);
    rpc Version(Empty) returns (StringResponse);

    // Binary
    rpc BinaryName(Empty) returns (StringResponse);
    rpc BinarySource(Empty) returns (BinarySourceResponse);
    rpc DefaultBinaryVersion(Empty) returns (StringResponse);
    rpc GetBuildConfig(BuildConfigRequest) returns (BuildConfigResponse);

    // Chain
    // DEPRECATED: DefaultChainID will be removed in v2.0.0
    rpc DefaultChainID(Empty) returns (StringResponse);
    rpc Bech32Prefix(Empty) returns (StringResponse);
    rpc BaseDenom(Empty) returns (StringResponse);

    // Configuration
    rpc GenesisConfig(Empty) returns (GenesisConfigResponse);
    rpc DefaultPorts(Empty) returns (PortConfigResponse);
    rpc DefaultGeneratorConfig(Empty) returns (GeneratorConfigResponse);

    // Docker
    rpc DockerImage(Empty) returns (StringResponse);
    rpc DockerImageTag(StringRequest) returns (StringResponse);
    rpc DockerHomeDir(Empty) returns (StringResponse);

    // Commands
    rpc InitCommand(InitCommandRequest) returns (StringListResponse);
    rpc StartCommand(StringRequest) returns (StringListResponse);
    rpc ExportCommand(StringRequest) returns (StringListResponse);

    // Paths
    rpc DefaultNodeHome(Empty) returns (StringResponse);
    rpc PIDFileName(Empty) returns (StringResponse);
    rpc LogFileName(Empty) returns (StringResponse);
    rpc ProcessPattern(Empty) returns (StringResponse);

    // Operations
    rpc ModifyGenesis(ModifyGenesisRequest) returns (BytesResponse);
    rpc ModifyGenesisFile(ModifyGenesisFileRequest) returns (ModifyGenesisFileResponse);
    rpc GenerateDevnet(GenerateDevnetRequest) returns (ErrorResponse);
    rpc GetCodec(Empty) returns (BytesResponse);

    // Validation
    rpc Validate(Empty) returns (ErrorResponse);

    // Snapshot
    rpc SnapshotURL(StringRequest) returns (StringResponse);
    rpc RPCEndpoint(StringRequest) returns (StringResponse);
    rpc AvailableNetworks(Empty) returns (StringListResponse);

    // Node Configuration
    rpc GetConfigOverrides(NodeConfigRequest) returns (ConfigOverridesResponse);

    // Governance
    // GetGovernanceParams retrieves governance parameters from the blockchain.
    // Plugins implement chain-specific logic to query voting periods, deposit amounts,
    // and other governance settings needed for upgrade workflows.
    rpc GetGovernanceParams(GovernanceParamsRequest) returns (GovernanceParamsResponse);

    // RPC Operations
    // All blockchain RPC operations are delegated to plugins to allow chain-specific implementations.
    // Each plugin implements these methods using their chain's specific RPC/REST endpoints.
    rpc GetBlockHeight(BlockHeightRequest) returns (BlockHeightResponse);
    rpc GetBlockTime(BlockTimeRequest) returns (BlockTimeResponse);
    rpc IsChainRunning(ChainStatusRequest) returns (ChainStatusResponse);
    rpc WaitForBlock(WaitForBlockRequest) returns (WaitForBlockResponse);
    rpc GetProposal(ProposalRequest) returns (ProposalResponse);
    rpc GetUpgradePlan(UpgradePlanRequest) returns (UpgradePlanResponse);
    rpc GetAppVersion(AppVersionRequest) returns (AppVersionResponse);
}

message Empty {}

message StringRequest {
    string value = 1;
}

message StringResponse {
    string value = 1;
}

message StringListResponse {
    repeated string values = 1;
}

message BytesResponse {
    bytes data = 1;
    string error = 2;
}

message ErrorResponse {
    string error = 1;
}

message BinarySourceResponse {
    string type = 1;
    string owner = 2;
    string repo = 3;
    string local_path = 4;
    string asset_name = 5;
    repeated string build_tags = 6;
}

message PortConfigResponse {
    int32 rpc = 1;
    int32 p2p = 2;
    int32 grpc = 3;
    int32 grpc_web = 4;
    int32 api = 5;
    int32 evm_rpc = 6;
    int32 evm_socket = 7;
}

message GenesisConfigResponse {
    string chain_id_pattern = 1;
    int64 evm_chain_id = 2;
    string base_denom = 3;
    int32 denom_exponent = 4;
    string display_denom = 5;
    string bond_denom = 6;
    string min_self_delegation = 7;
    int64 unbonding_time_seconds = 8;
    uint32 max_validators = 9;
    string min_deposit = 10;
    int64 voting_period_seconds = 11;
    int64 max_deposit_period_seconds = 12;
    string community_tax = 13;
}

message GeneratorConfigResponse {
    int32 num_validators = 1;
    int32 num_accounts = 2;
    string account_balance = 3;
    string validator_balance = 4;
    string validator_stake = 5;
    string output_dir = 6;
    string chain_id = 7;
}

message InitCommandRequest {
    string home_dir = 1;
    string chain_id = 2;
    string moniker = 3;
}

message ValidatorInfo {
    string moniker = 1;
    string cons_pub_key = 2;
    string operator_address = 3;
    string self_delegation = 4;
}

message ModifyGenesisRequest {
    bytes genesis = 1;
    string chain_id = 2;
    int32 num_validators = 3;
    repeated ValidatorInfo validators = 4;
}

message GenerateDevnetRequest {
    int32 num_validators = 1;
    int32 num_accounts = 2;
    string account_balance = 3;
    string validator_balance = 4;
    string validator_stake = 5;
    string output_dir = 6;
    string chain_id = 7;
    string genesis_file = 8;
}

message NodeConfigRequest {
    int32 node_index = 1;
    string chain_id = 2;
    PortConfigResponse ports = 3;
    string persistent_peers = 4;
    int32 num_validators = 5;
    bool is_validator = 6;
    string moniker = 7;
}

message ConfigOverridesResponse {
    bytes config_toml = 1;
    bytes app_toml = 2;
    string error = 3;
}

// ModifyGenesisFileRequest uses file paths instead of raw bytes
// to handle large genesis files that exceed gRPC message limits.
message ModifyGenesisFileRequest {
    string input_path = 1;   // Path to input genesis.json
    string output_path = 2;  // Path where modified genesis should be written
    string chain_id = 3;
    int32 num_validators = 4;
    repeated ValidatorInfo validators = 5;
}

message ModifyGenesisFileResponse {
    string error = 1;
    int64 output_size = 2;   // Size of the output file in bytes
}

// BuildConfigRequest requests build configuration for a specific network type.
message BuildConfigRequest {
    string network_type = 1;  // Target network type (e.g., "mainnet", "testnet", "devnet")
}

// BuildConfigResponse contains network-specific build configuration.
message BuildConfigResponse {
    repeated string tags = 1;           // Go build tags (e.g., ["netgo", "ledger"])
    repeated string ldflags = 2;        // Linker flags (e.g., ["-X main.Version=1.0", "-w"])
    map<string, string> env = 3;        // Environment variables (e.g., {"CGO_ENABLED": "0"})
    repeated string extra_args = 4;     // Additional arguments for build tool
    string error = 5;                   // Error message if network type not supported
}

// GovernanceParamsRequest requests governance parameters from a network plugin.
// The plugin uses these inputs to query the blockchain and return
// governance settings (voting periods, deposit requirements, etc.).
message GovernanceParamsRequest {
    // rpc_endpoint is the HTTP/HTTPS URL of the blockchain RPC or REST endpoint.
    // Format: "http://host:port" or "https://host:port"
    // Examples: "http://localhost:26657", "http://localhost:1317"
    string rpc_endpoint = 1;

    // network_type indicates the blockchain network context.
    // Values: "mainnet", "testnet", "devnet", or plugin-specific types
    string network_type = 2;
}

// GovernanceParamsResponse contains governance parameters retrieved from a blockchain.
// Success case: error field is empty (""), all parameter fields are populated
// Failure case: error field is non-empty, parameter fields may be zero/empty
message GovernanceParamsResponse {
    // voting_period_ns is the regular voting period in nanoseconds.
    // Type: int64 nanoseconds (for precise duration representation)
    // Example: 172800000000000 ns = 48 hours
    int64 voting_period_ns = 1;

    // expedited_voting_period_ns is the expedited voting period in nanoseconds.
    // MAY be 0 if chain doesn't support expedited proposals.
    // Example: 86400000000000 ns = 24 hours
    int64 expedited_voting_period_ns = 2;

    // min_deposit is the minimum deposit required for regular proposals.
    // Format: Numeric string (no decimals) in base denomination units.
    // Example: "10000000" = 10 tokens (assuming 6 decimal places)
    string min_deposit = 3;

    // expedited_min_deposit is the minimum deposit for expedited proposals.
    // MAY be empty/0 if chain doesn't support expedited proposals.
    string expedited_min_deposit = 4;

    // error contains an error message if the parameter query failed.
    // Empty string ("") indicates success.
    string error = 5;
}

// BlockHeightRequest requests current block height from a network plugin.
message BlockHeightRequest {
    string rpc_endpoint = 1;
}

// BlockHeightResponse contains the current block height.
message BlockHeightResponse {
    int64 height = 1;
    string error = 2;
}

// BlockTimeRequest requests average block time estimation.
message BlockTimeRequest {
    string rpc_endpoint = 1;
    int32 sample_size = 2;  // Number of blocks to sample for average calculation
}

// BlockTimeResponse contains the estimated average block time.
message BlockTimeResponse {
    int64 block_time_ns = 1;  // Average block time in nanoseconds
    string error = 2;
}

// ChainStatusRequest requests chain running status.
message ChainStatusRequest {
    string rpc_endpoint = 1;
}

// ChainStatusResponse contains chain running status.
message ChainStatusResponse {
    bool is_running = 1;
    string error = 2;
}

// WaitForBlockRequest requests to wait until a specific block height.
message WaitForBlockRequest {
    string rpc_endpoint = 1;
    int64 target_height = 2;
    int64 timeout_ms = 3;  // Timeout in milliseconds (0 = use default)
}

// WaitForBlockResponse indicates whether the target height was reached.
message WaitForBlockResponse {
    int64 current_height = 1;
    bool reached = 2;
    string error = 3;
}

// ProposalRequest requests a governance proposal by ID.
message ProposalRequest {
    string rpc_endpoint = 1;
    uint64 proposal_id = 2;
}

// ProposalResponse contains governance proposal details.
message ProposalResponse {
    uint64 id = 1;
    string title = 2;
    string description = 3;
    string status = 4;  // PROPOSAL_STATUS_DEPOSIT_PERIOD, PROPOSAL_STATUS_VOTING_PERIOD, etc.
    int64 voting_end_time_unix = 5;    // Unix timestamp in seconds
    int64 submit_time_unix = 6;        // Unix timestamp in seconds
    int64 deposit_end_time_unix = 7;   // Unix timestamp in seconds
    string total_deposit = 8;
    string final_tally_yes = 9;
    string final_tally_no = 10;
    string final_tally_abstain = 11;
    string error = 12;
}

// UpgradePlanRequest requests the current upgrade plan.
message UpgradePlanRequest {
    string rpc_endpoint = 1;
}

// UpgradePlanResponse contains upgrade plan details.
message UpgradePlanResponse {
    string name = 1;
    int64 height = 2;
    string info = 3;
    int64 time_unix = 4;  // Unix timestamp in seconds (deprecated, usually 0)
    bool has_plan = 5;    // True if an upgrade plan exists
    string error = 6;
}

// AppVersionRequest requests the application version.
message AppVersionRequest {
    string rpc_endpoint = 1;
}

// AppVersionResponse contains the application version.
message AppVersionResponse {
    string version = 1;
    string error = 2;
}
